--- a/style.css
+++ b/style.css
@@ -11,14 +11,14 @@ body {
 }
 
 img {
-  width: 100%;
+  width: 100%;  
   height: 100%;
 }
 
 .slider {
   overflow: hidden;
   position: relative;
-  width: 100px; /* 992 */
+  width: 992px; /* Screen with, and screen width / 1.29 */
   height: 768px;
 }
 
@@ -27,7 +27,7 @@ img {
   display: flex;
   position: absolute;
   top: 0;
-  left: -992px;
+  left: -992px; /* minus device or screen width */
   cursor: pointer;
 }
 
@@ -36,7 +36,7 @@ img {
 }
 
 .slide {
-  width: 992px;
+  width: 992px;  /* maybe screen width in pix, and / 1.29 */
   height: 768px;
 }
 
